--- a/project4.html
+++ b/project4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,12 +12,12 @@
 
         /* Change the font color of the <h1> heading */
         h1 {
-            color: #4CAF50; /* Green color */
+            color: 1px Green color;
         }
 
         /* Set the background color of the page */
         body {
-            background-color: #f0f0f0; /* Light grey */
+            background-color:2px yellow;
         }
 
         /* Set the font size of the paragraph <p> to 16px */
@@ -36,7 +36,7 @@
 
         /* Add a border and padding to a <div> container element */
         div {
-            border: 1px solid #ccc; /* Grey border */
+            border: 1px solid #ccc;
             padding: 10px;
         }
     </style>
